Upgraded to JDK 10 and modularity