@@ -1,3 +1,3 @@
-FROM azul/zulu-openjdk:8
+FROM azul/zulu-openjdk:10
 COPY target/microservice4-1.0-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar"]
